<resources>
    <string name="app_name">Rekindle</string>
    <string name="user">Username:</string>
    <string name="password">Password:</string>
    <string name="password1">Password(*):</string>
    <string name="repetir_password">Repeat password(*):</string>
    <string name="texto_numero_telefono">Phone Number:</string>
    <string name="acceder">Sign in</string>
    <string name="registro">Sign up</string>
    <string name="tipo_usuario">Type of user:</string>
    <string name="recuperar_password">
        <u>Recover password</u>
    </string>
    <string name="atras">Back</string>
    <string name="login">Log in</string>
    <string name="enviar">Send</string>
    <string name="refugee">Refugee</string>
    <string name="volunteer">Volunteer</string>
    <string name="subtitulo_formulario">Fill the next fields:</string>
    <string name="texto_nombre_formulario">Name(*):</string>
    <string name="texto_1apellido_formulario">Surname(*):</string>
    <string name="texto_2apellido_formulario">Second surname:</string>
    <string name="texto_email_formulario">Email(*):</string>
    <string name="formulario_refugiado">Refugee Form:</string>
    <string name="texto_nacimiento_refugiado">Birthdate:</string>
    <string name="texto_sexo_refugiado">Sex:</string>
    <string name="texto_procedencia_refugiado">Country of origin:</string>
    <string name="texto_pueblo_refugiado">Town:</string>
    <string name="texto_etnia_refugiado">Ethnic group:</string>
    <string name="texto_grupo_sanguineo_refugiado">Blood type:</string>
    <string name="texto_altura_refugiado">Height:</string>
    <string name="texto_complexion_refugiado">Complexion:</string>
    <string name="texto_ojos_refugiado">Eye color:</string>
    <string name="formulario_voluntario">Voluntary Form:</string>
    <string name="titulo_menu_principal">Main Menu</string>
    <string name="titulo_help">Help</string>
    <string name="listar_servicios">List Services</string>
    <string name="crear_servicio">Create Service</string>
    <string name="ver_perfil">See Profile</string>
    <string name="listar_reportes">List Reports</string>
    <string name="listar_solicitudes_donaciones">List Donation Requests</string>
    <string name="nombre_usuario_perfil">Name:</string>
    <string name="apellido1_usuario_perfil">First surname:</string>
    <string name="email_usuario_perfil">Email:</string>
    <string name="guardar">Save</string>
    <string name="editar">Edit</string>
    <string name="cambiar_password">
        <b>Change password</b>
    </string>
    <string name="actual_password">Current password</string>
    <string name="nuevo_password">New password</string>
    <string name="repetir_password1">Repeat password</string>
    <string name="opiniones">Reviews</string>
    <string name="inscribir">Enrol</string>
    <string name="chat">Chat</string>
    <string name="reportar">Report</string>
    <string name="lodge">Hosting</string>
    <string name="donation">Donations</string>
    <string name="formulario_donacion">Donation form:</string>
    <string name="lugar_recogida_donacion">Pick up location(*):</string>
    <string name="franja_horaria_donacion">Pick up time:</string>
    <string name="franja_horaria_inicio_donacion">Starting pick up time(*):</string>
    <string name="franja_horaria_fin_donacion">Ending pick up time(*):</string>
    <string name="curso_educativo">Educational course</string>
    <string name="oferta_empleo">Job offer</string>
    <string name="formulario_alojamiento">Housing form:</string>
    <string name="limite_solicitudes">Limit of requests:</string>
    <string name="domicilio">Domicile(*):</string>
    <string name="fecha_limite">Deadline:</string>
    <string name="descripcion">Description(*):</string>
    <string name="formulario_oferta_empleo">Job offer form:</string>
    <string name="puesto_oferta_empleo">Job position(*):</string>
    <string name="requisitos_oferta_empleo">Requirements(*):</string>
    <string name="jornada_oferta_empleo">Workday(*):</string>
    <string name="horas_semanales_oferta_empleo">Weekly hours(*):</string>
    <string name="duracion_oferta_empleo">Estimated duration(*):</string>
    <string name="plazas_oferta_empleo">Available placesLimit:</string>
    <string name="sueldo_oferta_empleo">Salary(*):</string>
    <string name="telefono">Contact telephone number(*):</string>
    <string name="direccion">Address(*):</string>
    <string name="formulario_curso_educativo">Educative course form</string>
    <string name="requisitos_curso_educativo">Prerequisites(*):</string>
    <string name="ambito_curso_educativo">Field:</string>
    <string name="horario_curso_educativo">Schedule(*):</string>
    <string name="price">Price:</string>
    <string name="email_usuario_login">Email</string>
    <string name="password_usuario_login">Password</string>
    <string name="go_to_signup">
        <b>
            <u>No account yet? Create one</u>
        </b>
    </string>
    <string name="url_server">http://10.4.41.147:8080</string>
    <string name="registrado_correctamente">Registered successfully!</string>
    <string name="registro_fallido">Sign Up failed!</string>
    <string name="servicio_alojamiento_creado_correctamente">Accomodation service created
        successfully!
    </string>
    <string name="servicio_alojamiento_fallido">Accomodation service failed!</string>
    <string name="curso_educativo_creado_correctamente">Educational course created
        successfully!
    </string>
    <string name="curso_educativo_fallido">Educational course failed!</string>
    <string name="donacion_creada_correctamente">Donation created
        successfully!
    </string>
    <string name="donacion_fallida">Donation failed!</string>
    <string name="oferta_empleo_correctamente">Job offer created
        successfully!
    </string>
    <string name="oferta_empleo_fallida">Job offer failed!</string>
    <string name="solicitud_creada_correctamente">Request created successfully!</string>
    <string name="solicitud_fallida">Request failed!</string>
    <string name="reporte_creado_correctamente">Report created succesfully!
    </string>
    <string name="reporte_fallido">Report failed!</string>
    <string name="solicitud_gestionada_correctamente">Request managed successfully!</string>
    <string name="solicitud_gestion_fallida">Request management failed!</string>
    <string name="guardado_correctamente">Save successfully!</string>
    <string name="guardado_fallido">Save failed!</string>
    <string name="ajustes">Settings</string>
    <string name="ayuda">Help</string>
    <string name="about">About...</string>
    <string name="cerrar_sesion">Log out</string>
    <string name="mis_servicios">My services</string>
    <string name="buscar_personas">Search people</string>
    <string name="ajustes_generales">General settings</string>
    <string name="idioma">Language:</string>
    <string name="enviar_correo">Send mail</string>
    <string name="code_request">Request recovery code</string>
    <string name="title_about">About Rekindle App</string>
    <string name="version">Version 0.3</string>
    <string name="company">2018-2018 Rekindle Team</string>
    <string name="rights">All rights reserved</string>
    <string name="back_to_login">
        <b>
            <u>Back to the previous screen</u>
        </b>
    </string>
    <string name="introducir_codigo">Code(*):</string>
    <string name="titulo_mis_servicios">My services</string>
    <string-array name="clic_servicio">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="nombre_obligatorio">Name required</string>
    <string name="nombre_largo">Name is too long, maximum 20 letters</string>
    <string name="nombre_letras">The name can only contain letters</string>
    <string name="email_obligatorio">Email required</string>
    <string name="email_largo">Email is too long, maximum 30 characters</string>
    <string name="email_formato">Email format is incorrect; correct format = x@x.x</string>
    <string name="password_obligatoria">Password is required</string>
    <string name="password_larga">Password is too long, maximum 15 characters</string>
    <string name="short_password">Password too short, minimum 4 characters</string>
    <string name="password_distinta">Passwords do not match</string>
    <string name="apellido1_obligatorio">First last name required</string>
    <string name="apellido1_largo">First last name too long, maximum 20 letters</string>
    <string name="apellido1_letras">First last name can only contains letters</string>
    <string name="apellido2_largo">Second last name too long, maximum 20 letters</string>
    <string name="apellido2_letras">Second last name can only contains letters</string>
    <string name="telefonoUsuario_numeros">Phone only can contains digits</string>
    <string name="telefonoUsuario_largo">Phone too long, maximum 40 digits</string>
    <string name="procedencia_letras">The name of the country of origin can only contain letters
    </string>
    <string name="procedencia_largo">The name of the country of origin cis too long, maximum 20
        letters
    </string>
    <string name="pueblo_largo">The name of the town is too long, maximum 40 letters</string>
    <string name="pueblo_letras">The name os the towns can only contain letters</string>
    <string name="etnia_largo">The name of the ethnic group is too long, maximum 20 letters</string>
    <string name="etnia_letras">The name of the ethnic group can only contain letters</string>
    <string name="nombreServicio_obligatorio">Name of service required</string>
    <string name="nombreServicio_largo">The name of the service is too long, maximum 50 letters
    </string>
    <string name="nombreServicio_letras">The name of the service can only contain letters</string>
    <string name="telefonoServicio_obligatorio">Phone required</string>
    <string name="solicitudes_numeros">The request limit must be a number</string>
    <string name="descripcion_obligatoria">Description is required</string>
    <string name="descricpion_larga">The description is too long, maximum 300 letters</string>
    <string name="descripcion_letras">The description can only contain letters</string>
    <string name="puestoTrabajo_obligatorio">Job required</string>
    <string name="puestoTrabajo_largo">The name of the job is too long, maximum 50 characters
    </string>
    <string name="requisitos_obligatorios">Requirements are required</string>
    <string name="requisitos_largo">The description of the requirements is too long, maximum 100
        characters
    </string>
    <string name="sueldo_obligatorio">Salary is required</string>
    <string name="sueldo_formto">Incorrect price format; correct format = decimal with maximum two
        digits of precision
    </string>
    <string name="plazas_numeros">Places only can contain digits</string>
    <string name="plazas_largo">The number of placesLimit is too long, maximum 5 digits</string>
    <string name="ambito_obligatorio">Ambit required</string>
    <string name="ambito_largo">Ambit is too long, maximum 50 characters</string>
    <string name="links">Help Links</string>
    <string name="createLink">Create link</string>
    <string name="value_services">Value services</string>
    <string name="date_title">Date</string>
    <string name="start_date">From date</string>
    <string name="end_date">To date</string>
    <string name="minimumRating">Minimum rating</string>
    <string name="distance">Distance</string>
    <string name="custom_location">Choose location</string>
    <string name="reset_all">Reset</string>
    <string name="meters">meters</string>
    <string name="kilometers">kilometers</string>
    <string name="your_location">Your location</string>
    <string name="radius">Radius</string>
    <string name="listUsers">List users</string>
</resources>