<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dim10"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim10"
            android:text="@string/date_title"/>

        <EditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/start_date"/>

        <EditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/end_date"/>

        <TextView
            style="@style/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/minimumRating"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"/>

        <TextView
            style="@style/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/distance"/>

        <RadioGroup
            android:id="@+id/rg_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/gps_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_location"/>

            <RadioButton
                android:id="@+id/custom_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                android:text="@string/custom_location"/>
        </RadioGroup>

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/radius"
            android:inputType="numberDecimal"/>

        <RadioGroup
            android:id="@+id/distance_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim10"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/meters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meters"/>

            <RadioButton
                android:id="@+id/kilometers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilometers"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/reset_all"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/enviar"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>