<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/navigation_item_1"-->
            <!--android:checked="true"-->
            <!--android:icon="@drawable/ic_android"-->
            <!--android:title="@string/navigation_item_1"-->
        <!--/>-->

        <!-- Otra sección -->
        <!--<item-->
            <!--android:id="@+id/otra_section"-->
            <!--android:title="@string/subtitulo">-->
            <!--<menu>-->
                <!--<item-->
                    <!--android:id="@+id/nav_otro_item"-->
                    <!--android:icon="@android:drawable/otro_icono"-->
                    <!--android:title="@string/otro_item" />-->
            <!--</menu>-->
        <!--</item>-->
        <item
            android:id="@+id/ver_perfil"
            android:icon="@drawable/ic_ver_perfil"
            android:checked="false"
            android:title="@string/ver_perfil"
        />

        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_configuracion"
            android:title="@string/ajustes"
        />

        <item
            android:id="@+id/ayuda"
            android:icon="@drawable/ic_help"
            android:title="@string/ayuda"
        />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about"
        />

        <item
            android:id="@+id/cerrar_sesion"
            android:icon="@drawable/ic_log_out"
            android:title="@string/cerrar_sesion"
        />
    </group>

</menu>