<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.menu.mainMenu.MainMenuRefugee">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/listar_servicios_MenuPrincipalRefugiado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:text="@string/listar_servicios"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mis_servicios_MenuPrincipalRefugiado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listar_servicios_MenuPrincipalRefugiado"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/mis_servicios"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/valorations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mis_servicios_MenuPrincipalRefugiado"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/value_services"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buscar_personas_MenuPrincipalRefugiado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/valorations"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/buscar_personas"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buscar_personas_MenuPrincipalRefugiado"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/chat"
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dim20"
            android:layout_marginRight="@dimen/dim20"
            android:layout_marginTop="@dimen/dim20"
            android:text="@string/links"
        />
    </LinearLayout>



</RelativeLayout>