<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.usuario.rekindlefrontend.CambiarPassword">

    <Button
        android:id="@+id/atras_cambiar_password"
        android:text="@string/atras"
        style="@style/boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/repeat_password"
        android:layout_marginTop="@dimen/dim10"
        android:layout_marginLeft="@dimen/dim10" />

    <TextView
        android:id="@+id/label_cambiar_password"
        style="@style/text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim75"
        android:text="@string/cambiar_password" />

    <TextView
        android:id="@+id/label_actual_password"
        style="@style/text_view"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_cambiar_password"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginLeft="@dimen/dim20"
        android:text="@string/actual_password" />

    <EditText
        android:id="@+id/actual_password"
        style="@style/edit_text"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_actual_password"
        android:layout_marginRight="@dimen/dim20"
        android:layout_marginLeft="@dimen/dim20"
        android:layout_marginTop="@dimen/dim6"
        android:text="" />

    <TextView
        android:id="@+id/label_new_password"
        style="@style/text_view"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/actual_password"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginLeft="@dimen/dim20"
        android:text="@string/nuevo_password" />

    <EditText
        android:id="@+id/new_password"
        style="@style/edit_text"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_new_password"
        android:layout_marginRight="@dimen/dim20"
        android:layout_marginLeft="@dimen/dim20"
        android:layout_marginTop="@dimen/dim6"
        android:text="" />

    <TextView
        android:id="@+id/label_repeat_password"
        style="@style/text_view"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginLeft="@dimen/dim20"
        android:text="@string/repetir_password1" />

    <EditText
        android:id="@+id/repeat_password"
        style="@style/edit_text"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/label_repeat_password"
        android:layout_marginRight="@dimen/dim20"
        android:layout_marginLeft="@dimen/dim20"
        android:layout_marginTop="@dimen/dim6"
        android:text="" />

    <Button
        android:id="@+id/guardar_cambiar_password"
        android:text="@string/guardar"
        style="@style/boton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/repeat_password"
        android:layout_marginTop="@dimen/dim24"
        android:layout_marginLeft="@dimen/dim10" />


</RelativeLayout>
