<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".PantallaInicio">

    <TextView
        android:id="@+id/titulo_PantallaInicio"
        android:text="@string/app_name"
        style="@style/text_view"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/texto"
        />

    <Button
        android:id="@+id/login_PantallaInicio"
        android:text="@string/login"
        style="@style/boton"
        android:layout_width="match_parent"
        android:layout_below="@id/titulo_PantallaInicio"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/registrarse"
        android:text="@string/registro"
        style="@style/boton"
        android:layout_width="match_parent"
        android:layout_below="@id/login_PantallaInicio"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</RelativeLayout>